--- a/mystyle.css
+++ b/mystyle.css
@@ -81,7 +81,7 @@ body {
 }
 
 #libra {
-  background: lightyellow;
+  background: lightblue;
   padding: 20px;
   margin-bottom: 15px;
   border-radius: 25px;
@@ -89,7 +89,7 @@ body {
 }
 
 #gemini {
-  background: lightyellow;
+  background: lightblue;
   padding: 10px;
   margin-bottom: 15px;
   border-radius: 25px;
@@ -97,7 +97,7 @@ body {
 }
 
 #virgo {
-  background: lightyellow;
+  background: lightblue;
   padding: 10px;
   margin-bottom: 15px;
   border-radius: 25px;
@@ -105,7 +105,7 @@ body {
 }
 
 #scorpio {
-  background: lightyellow;
+  background: lightblue;
   padding: 10px;
   margin-bottom: 15px;
   border-radius: 25px;
@@ -133,7 +133,7 @@ ul {
 
 h1 {
   font-family: Passion_One;
-  background: lightyellow;
+  background: lightblue;
 }
 
 a {
